--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -118,7 +118,7 @@
 				<div class="modal-body">
 					<div class="form-group">
 						<label for="reviewTitle">Review title:</label><br>
-						<input class="form-control" type="text" id="reviewTitle" name="reviewTitle" autofocus required><br>
+						<input class="form-control" type="text" id="reviewTitle" name="reviewTitle" autofocus><br>
 					</div>
 					<div class="form-group">
 						<label for="rating">Rating:</label><br>
@@ -126,7 +126,7 @@
 					</div>
 					<div class="form-group">
 						<label for="comments">Review body:</label>
-						<textarea class="form-control" id="comments" name="comments" rows="4" required></textarea>
+						<textarea class="form-control" id="comments" name="comments" rows="4"></textarea>
 					</div>
 					<input type="text" class="" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled>
 
@@ -154,7 +154,7 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif">
+					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif" requierd>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -191,6 +191,12 @@
 		</div>
 	</div>
 </div>
+
+{% if message %}
+<script>
+	alert("{{message}}");
+</script>
+{% endif %}
 
 <script>
 	$(document).ready(function(){
