--- a/dormapp/templates/base.html
+++ b/dormapp/templates/base.html
@@ -7,14 +7,16 @@
 	<!-- Required for static files -->
 	{% load static %}
 
-	<!-- Bootstrap and StarRating base stylesheets -->
+	<!-- Bootstrap, StarRating, and Select2 base stylesheets -->
 	<link rel="stylesheet" href="{% static 'Bootstrap5-2/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'StarRating/css/star-rating.min.css' %}">
+	<link rel="stylesheet" href="{% static 'Select2/css/select2.min.css' %}">
 
-	<!-- jQuery, Bootstrap and StarRating base scripts -->
+	<!-- jQuery, Bootstrap, StarRating, and Select2 base scripts -->
 	<script src="{% static 'jquery-3.6.1.min.js' %}"></script>
 	<script src="{% static 'Bootstrap5-2/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'StarRating/js/star-rating.min.js' %}"></script>
+	<script src="{% static 'Select2/js/select2.full.min.js' %}"></script>
 	
 	<!-- StarRating SVG theme -->
 	<link rel="stylesheet" href="{% static 'StarRating/themes/krajee-svg/theme.min.css' %}">
