Form validation required input for all pages

--- a/dormapp/templates/dormReviews.html
+++ b/dormapp/templates/dormReviews.html
@@ -98,7 +98,7 @@
 					</div>
 					<div class="form-group">
 						<label for="rating">Rating:</label><br>
-						<input class="form-control" type="number" id="rating" name="rating"class="rating-loading" min="0" max="5" required><br>
+						<input class="form-control" type="number" id="rating" name="rating"class="rating-loading" min="0" max="5"><br>
 					</div>
 					<div class="form-group">
 						<label for="comments">Review body:</label>
