--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -41,7 +41,7 @@
 				<div class="modal-body">
 					<div class="form-group">
 						<label for="name">Name:</label><br>
-						<input class="form-control" type="text" id="name" name="name" autofocus><br>
+						<input class="form-control" type="text" id="name" name="name" autofocus required><br>
 					</div>
 					<input type="text" class="" value="{{universityId}}" id="universityId" name="universityId" hidden disabled>
 				</div>
