--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -122,7 +122,7 @@
 					</div>
 					<div class="form-group">
 						<label for="rating">Rating:</label><br>
-						<input class="form-control" type="number" id="rating" name="rating" class="rating-loading" min="0" max="5" required><br>
+						<input class="form-control" type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
 					</div>
 					<div class="form-group">
 						<label for="comments">Review body:</label>
@@ -154,7 +154,7 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif" requierd>
+					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif" required>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
