--- a/dormapp/templates/base.html
+++ b/dormapp/templates/base.html
@@ -32,6 +32,11 @@
 	<header class="d-flex justify-content-center py-3">
 		<h1><a class="logo-link no-underline" href="/dormapp/">DormReviews</a></h1>
 	  </header>
+	<style>
+		body {
+			background-image: linear-gradient(to right, white, #D2B4DE);
+		  }		
+	</style>
 	<div class="container">
 		{% block content %}
 		replace me
