--- a/dormapp/templates/base.html
+++ b/dormapp/templates/base.html
@@ -35,7 +35,10 @@
 	<style>
 		body {
 			background-image: linear-gradient(to right, white, #D2B4DE);
-		  }		
+		  }	
+		.paddingClass {
+			padding: 50px 10px 50px 10px;
+		}	
 	</style>
 	<div class="container">
 		{% block content %}
