--- a/dormapp/templates/homePage.html
+++ b/dormapp/templates/homePage.html
@@ -32,9 +32,11 @@
 {% endfor %}
 </ul>
 
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addUniversityPopup">
-	Add University
-</button>
+<div class="paddingClass-less">
+	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addUniversityPopup">
+		Add University
+	</button>
+</div>
 
 <!-- New University Modal -->
 <div class="modal fade" id="addUniversityPopup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
