--- a/dormapp/templates/base.html
+++ b/dormapp/templates/base.html
@@ -37,8 +37,11 @@
 			background-image: linear-gradient(to right, white, #D2B4DE);
 		  }	
 		.paddingClass {
-			padding: 50px 10px 50px 10px;
-		}	
+			padding: 30px 10px 30px 10px;
+		}
+		.paddingClass-less {
+			padding: 10px 0px 10px 0px;
+		}
 	</style>
 	<div class="container">
 		{% block content %}
