--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -2,28 +2,34 @@
 {% block content %}
 {% load static %}
 
-<h2>Residence Halls at {{universityName}}</h2>
+<div class="paddingClass">
+	<h2>Residence Halls at {{universityName}}</h2>
 
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addResHallPopup">
-	Add Residence Hall
-</button>
+	<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addResHallPopup">
+		Add Residence Hall
+	</button>
+</div>
 
 {% for resHall in resHallsList %}
 
-	<div class="card">
+<div class="card">
   	<div class="card-body">
-	{% if resHall.thumbnail %}
-	<img src="/media/{{resHall.thumbnail}}" alt=resHall.name
-		style="width:300px;height:200px"/>
-	{% endif %}
-    <h5 class="card-title">{{resHall.name}}</h5>
-    <p class="card-text">Average rating: {{resHall.rating}}</p>
-	<input id="rating-system-{{resHall.id}}" value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
-    <a href="/dormapp/{{resHall.id}}/dormRooms" class="stretched-link"></a>
-    
-  	</div>
+		<div class="row">
+			<div class="col-3">
+				{% if resHall.thumbnail %}
+				<img src="/media/{{resHall.thumbnail}}" alt=resHall.name
+					style="width:300px;height:200px"/>
+				{% endif %}
+			</div>
+			<div class="col">
+				<h5 class="card-title">{{resHall.name}}</h5>
+    			<p class="card-text">Average rating: {{resHall.rating}}</p>
+				<input id="rating-system-{{resHall.id}}" value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
+    			<a href="/dormapp/{{resHall.id}}/dormRooms" class="stretched-link"></a>
+			</div>
+		</div>
 	</div>
-
+</div>
 	
 {% endfor %}
 
