enctype added to form

--- a/dormapp/templates/homePage.html
+++ b/dormapp/templates/homePage.html
@@ -47,7 +47,7 @@
 	aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form id="addUniversityForm" action="addUniversity" method="POST" autocomplete="off">
+			<form id="addUniversityForm" action="addUniversity" method="POST" autocomplete="off" enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="modal-header">
 					<h5 class="modal-title" id="staticBackdropLabel">Add University</h5>
