--- a/dormapp/templates/homePage.html
+++ b/dormapp/templates/homePage.html
@@ -59,7 +59,7 @@
 						<input class="form-control" type="text" id="name" name="name" autofocus required><br>
 					</div>
 					<div class="form-group">
-						<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif" required>
+						<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif">
 					</div>
 				</div>
 				<div class="modal-footer">
