--- a/dormapp/templates/homePage.html
+++ b/dormapp/templates/homePage.html
@@ -17,13 +17,6 @@
 
 </style>
 
-
- 
-
-
-
-
-
 <h2>Select your college/university:</h2>
 <ul class="list-group not-too-wide">
 {% for university in universitiesList %}
@@ -64,6 +57,7 @@
 						<input class="form-control" type="text" id="name" name="name" autofocus required><br>
 					</div>
 					<div class="form-group">
+						<label for="myPhoto">Logo (optional)</label><br>
 						<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif">
 					</div>
 				</div>
