--- a/dormapp/templates/base.html
+++ b/dormapp/templates/base.html
@@ -42,6 +42,43 @@
 		.paddingClass-less {
 			padding: 10px 0px 10px 0px;
 		}
+
+		a.custom-nav {
+			font-size: 20px;
+			text-decoration: none;
+			display: inline;
+			padding: 8px 16px;
+		}
+			
+		a.custom-nav:hover {
+		background-color: #ddd;
+		color: black;
+		}
+		
+		.previous {
+		background-color: #700000;
+		color: white;
+		}
+		
+		.next {
+		background-color: #04AA6D;
+		color: white;
+		}
+		
+		.round {
+		border-radius: 10%;
+		}
+
+		.next-to-button {
+			display: inline-block;
+			vertical-align: middle;
+		}
+
+		div.button-and-header {
+			display: block;
+			padding-bottom: 20px;
+		}
+
 	</style>
 	<div class="container">
 		{% block content %}
