--- a/dormapp/templates/homePage.html
+++ b/dormapp/templates/homePage.html
@@ -58,7 +58,7 @@
 					</div>
 					<div class="form-group">
 						<label for="myPhoto">Logo (optional)</label><br>
-						<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif">
+						<input type="file" id="myPhoto" name="myPhoto" accept="image/*">
 					</div>
 				</div>
 				<div class="modal-footer">
