--- a/dormapp/templates/dormReviews.html
+++ b/dormapp/templates/dormReviews.html
@@ -23,9 +23,12 @@
 	</style>
 
 <div class="row">
-	<div class="col">
+	<div class="col paddingClass-less">
 		<!-- Room number and buttons-->
-		<h2>Room {{dormName}}</h2>
+		<div class="button-and-header">
+			<a href="{{backUrl}}" class="custom-nav previous round">&#8249;</a>
+			<h2 class="next-to-button">&nbsp;Room {{dormName}}</h2>
+		</div>
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
 			Write Review
 		</button>
@@ -33,7 +36,7 @@
 			Upload Photo
 		</button>
 	</div>
-	<div class="col">
+	<div class="col paddingClass-less">
 		<!-- Photo Carousel -->
 		{% if photoCount %}
 			<div id="resHallCarousel" class="carousel slide" data-bs-ride="false">
@@ -129,7 +132,7 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif" required>
+					<input type="file" id="myPhoto" name="myPhoto" accept="image/*" required>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
